[package]
name = "firehose_listener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
headers = "0.4.0"
reqwest = { version = "0.12.15", features = ["json"] }
rocketman = "0.2.0"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
